# rust-demo-webserver

./: Dockerfile  README.md
server1/: .dockerignore  Cargo.toml  Dockerfile  build_docker.sh  start.sh
server1/kustomize/: deployment.yaml  service.yaml
server1/src/: main.rs
server2/: Cargo.toml  Dockerfile  build_docker.sh  start.sh
server2/.cargo/: config
server2/src/: main.rs
