[package]
name = "server1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## Mandatory to be built in docker, especially for musl architecture
openssl = { version = "0.10.43", features = ["vendored"] }
actix-web = { version = "4", features = ["rustls"] }
rustls = "0.20.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }  # for our async runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"